# plasmoid-mini-player

./: CHANGELOG  CMakeLists.txt  INSTALL  README  TODO
applet/: Applet.cpp  Applet.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Constants.h  DBusInterface.cpp  DBusInterface.h  DBusPlayerAdaptor.cpp  DBusPlayerAdaptor.h  DBusPlaylistsAdaptor.cpp  DBusPlaylistsAdaptor.h  DBusRootAdaptor.cpp  DBusRootAdaptor.h  DBusTrackListAdaptor.cpp  DBusTrackListAdaptor.h  MetaDataManager.cpp  MetaDataManager.h  Player.cpp  Player.h  PlayerDBusHandler.cpp  PlayerDBusHandler.h  PlaylistManager.cpp  PlaylistManager.h  PlaylistModel.cpp  PlaylistModel.h  PlaylistReader.cpp  PlaylistReader.h  PlaylistWriter.cpp  PlaylistWriter.h  RootDBusHandler.cpp  RootDBusHandler.h  SeekSlider.cpp  SeekSlider.h  TrackListDBusHandler.cpp  TrackListDBusHandler.h  VideoWidget.cpp  VideoWidget.h  VolumeSlider.cpp  VolumeSlider.h  (+1 more)
applet/dbus/: org.freedesktop.MediaPlayer.player.xml  org.freedesktop.MediaPlayer.root.xml  org.freedesktop.MediaPlayer.tracklist.xml
applet/locale/: CMakeLists.txt  Messages.sh  de.po  et.po  pl.po  plasma_applet_miniplayer.pot  pt.po  ru.po  sv.po  uk.po
applet/ui/: controls.ui  fullScreen.ui  general.ui  jumpToPosition.ui  playlist.ui  track.ui  volume.ui
cmake/: FindQtMultimediaKit.cmake
